--- a/app/styles/th/_navbar.scss
+++ b/app/styles/th/_navbar.scss
@@ -44,6 +44,7 @@
 
 		.navbar-toggle {
 			margin : 19px 10px;
+			display: block;
 		}
 
 		.navbar-nav {
@@ -128,6 +129,10 @@
 					padding-left : 0.7em;
 				}
 			}
+		}
+
+		.navbar-toggle {
+			display: none;
 		}
 	}
 }
