--- a/app/styles/th/overrides/_slider.scss
+++ b/app/styles/th/overrides/_slider.scss
@@ -22,7 +22,7 @@
 			width       : 35px;
 			height      : auto;
 			margin      : 0;
-			margin-top  : -90px;
+			margin-top  : -60px;
 			font-size   : 110px;
 			font-family : Arial, Helvetica, sans-serif;
 
